score bug fix on mobile

--- a/2048.css
+++ b/2048.css
@@ -2,6 +2,7 @@ body{
     font-family: 'Poppins', sans-serif;
     text-align: center;
     background-color: rgb(248, 248, 238);
+    touch-action: manipulation;
 }
 
 hr{
